# dmuon

./: .gitignore  LICENSE  NOTICE  OPEN_SOURCE_AUDIT.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml
benchmarks/: analyze_tp_trace.py  batch_assignment_ilp.py  batch_assignment_testdata.json  bench_batched_syrk_autotune.py  bench_batched_syrk_workload.py  bench_comm.py  bench_e2e.py  bench_llm.py  bench_llm_ddp.py  bench_optimizer.py  bench_syrk.py  bench_tp_llm.py  profile_llm_3b.py  profiled_ilp_simulation.py  run_tp_llm_benchmark.sh  tp_fused_manual.py
dmuon/: __init__.py  _balance_profile.py  _internal_utils.py  _owner_rank.py  _replicate_profile.py  api.py  checkpoint.py  comm.py  diagnostics.py  fast_clip.py  grad_clip.py  group.py  param.py  partition.py  patch.py  policy.py  state.py  utils.py
dmuon/_backends/: __init__.py
dmuon/_core/: __init__.py  comm.py  dynamo.py  owner_rank.py  partition.py  process_groups.py  profiled_ilp.py  state.py  tp.py
dmuon/csrc/: fast_clip_kernel.cu
dmuon/kernels/: __init__.py  cache_utils.py  dsl_utils.py  syrk_backends.py  syrk_quack.py  syrk_sm80.py  tilelang_batched.py
dmuon/optim/: __init__.py  muon.py  newton_schulz.py  profiled_batch.py  syrk_dispatch.py
docs/: contributing.md  index.md  llm_benchmark.md  troubleshooting.md
docs/assets/: extra.css
docs/design/: architecture.md
docs/examples/: basic-dp.md  tp-dp.md
docs/faq/: index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: checkpoint.md  custom-hook-boundaries.md  grad-accumulation.md  hsdp.md  integration-recipes.md  profiling-and-fallback.md  pure-dmuon-routing.md  tp-support.md  training.md  z2-z3-modes.md
docs/internal/: syrk_benchmark.md
docs/reference/: api.md  communication-cost.md  newton-schulz.md
docs/stylesheets/: custom.css
docs/zh/: contributing.md  index.md  troubleshooting.md
examples/: basic_dp.py  tp_dp.py
tests/: README.md  _debug_dp_group.py  test_e2e_dp.py  test_e2e_tp_dp.py  test_multiprocessing.py  test_partition.py
tests/distributed/: debug_hsdp_step0.py  parse_tp_overlap.py  parse_tp_overlap_v2.py  profile_tp_overlap.py  run_tp_alignment.sh  run_tp_comm_order.sh  smoke_hsdp_sync.py  test_3d_mesh.py  test_checkpoint.py  test_correctness.py  test_ddp_correctness.py  test_ddp_tp_correctness.py  test_direct_weight_access.py  test_e2e_dp.py  test_e2e_tp_dp.py  test_fast_clip_distributed.py  test_grad_accum.py  test_hsdp_async_correctness.py  test_hsdp_correctness.py  test_hsdp_restart.py  test_mixed_precision_nan.py  test_multiprocessing.py  test_muon_step.py  test_param_policy_mixed_precision.py  test_process_group_policy.py  test_reduce_regression.py  test_replicate_alignment.py  test_tp_alignment.py  test_tp_comm_order.py  test_tp_correctness.py  test_tp_fused_manual.py  test_tp_muon_step.py  test_tp_ns.py  test_tp_overlap_paired.py  test_tp_overlap_replay.py  tp_profile_utils.py
tests/precision/: __init__.py  analyze.py  bench_backends.py  matrix_zoo.py  plot_spectra.py  plots.py  polar_metrics.py  ref_ns.py  run_experiment.py
tests/unit/: test_async_wait_semantics.py  test_autotune_cache_per_backend.py  test_checkpoint_state_dtype.py  test_comm_context.py  test_diagnostics.py  test_fallback_protocol.py  test_fast_clip.py  test_foreach_copy_unshard.py  test_forward_prefetch_order.py  test_fsdp2_patch_compat.py  test_fsdp2_utils.py  test_grad_clip.py  test_hook_boundary.py  test_hsdp_owner_only.py  test_muon_first_step_logging.py  test_newton_schulz.py  test_newton_schulz_kernel_arg.py  test_ns_backend_api.py  test_owner_rank_2d.py  test_param_cached_attrs.py  test_param_policy.py  test_param_policy_state_cast.py  test_partition.py  test_partition_2d.py  test_partition_with_tp.py  test_priority_order.py  test_profiled_batch_numeric.py  test_profiled_ilp.py  test_profiled_ilp_assignment.py  test_profiled_ilp_runtime.py  test_replicate_reduce_semantics.py  test_syrk.py  test_syrk_bneqa_debug.py  (+8 more)
(+32 files in other folders)
