[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmuon"
version = "0.2.0"
description = "Dedicated parameter ownership for distributed training with matrix optimizers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
]

[project.optional-dependencies]
syrk = [
    "nvidia-cutlass-dsl>=4.4.2",
    "apache-tvm-ffi>=0.1.6,<0.2",
    "torch-c-dlpack-ext",
]
# quack-kernels ships its own pinned cutlass-dsl / tvm-ffi / torch-c-dlpack-ext,
# so this extras deliberately does NOT re-list them.  SM90+ users pick up the
# full Tri Dao SYRK stack via `pip install dmuon[quack]`.
quack = [
    "quack-kernels>=0.3,<0.4",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
# Flat repo layout: the Python package is just ``dmuon/`` at the repo root.
# Setuptools ≥ 70 refuses to auto-discover when peers like ``benchmarks/`` or
# ``tests/`` look like additional top-level packages, so we pin the include
# list explicitly here.
include = ["dmuon*"]
exclude = [
    "benchmarks*",
    "tests*",
    "docs*",
    "examples*",
    "assets*",
    "site*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E731", "E741", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
